# metspa

./: .flake8  .git_blame_ignore_revs  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
metspa/: exceptions.py  interface.py  main.py  outmail.py  postprocess.py  processdata.py  queries.py  report.py  temperatureloader.py  utils.py
output/: climat_3129_S1970_E2022.csv  climat_3195_S1970_E2022.csv  climat_3195_S2000_E2022.csv  climat_3196_S1970_E2022.csv  climat_3200_S1970_E2022.csv
tests/: test_interface.py  test_postprocess.py  test_queries.py
tests/resources/: daily_id3434X_s2022-09-01T00:00:00UTC_e2022-12-14T00:00:00UTC.json
